# mplchart

./: .envrc  .gitattributes  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  LICENSE  MANIFEST.in  README.md  SHORTDESC.md  WORKFLOW.md  makefile  noxfile.py  pyproject.toml  setup.cfg  tasks.py  tox.ini  tox.toml
.claude/: CLAUDE.md
.claude/commands/: check-all.md  compare-indicators.md  quiz.md
.claude/memory/: MEMORY.md  feedback-changelog-style.md  feedback-envrc.md  feedback-no-coauthor.md  feedback-optional-imports.md  feedback-run-pytest.md  feedback-silence-pyright.md  feedback-vscode-interpreter-path.md  project-backend-architecture.md  project-examples-structure.md  project-operator-api.md  project-pandas-expressions-gotchas.md  project-pane-api.md  project-polars-migration.md
.claude/rules/: notebook-checks.md  (+3 more)
archive/: MANIFEST.in  axes.py  date_labels.py  fixed_layout.py  modifiers.py  multiple-plots.ipynb  noxfile.py  pyproject.toml  setup.cfg  tox.ini  wrappers.py
docs/: architecture.md  expressions-stopgap.md  get-target-removal.md  indicator-info.md  migration-breakdown.md  migration-inquiry.md  migration-primitives.md  migration-proposal.md  migration-roadmap.md
examples/: README.md  adx-indicator.ipynb  areaplot-primitive.ipynb  barplot-primitive.ipynb  bollinger-bands.ipynb  bop-indicator.ipynb  builtin-indicators.ipynb  candlestick-chart.ipynb  candlesticks-chart.ipynb  chart-custom-points.ipynb  chart-expressions.ipynb  chart-from-script.py  chart-indicators.ipynb  chart-primitives-pandas.ipynb  chart-primitives-polars.ipynb  chart-primitives.ipynb  chart-render.ipynb  charting-tests.ipynb  compare-tickers.ipynb  curve-indicator.ipynb  custom-indicator.ipynb  dema-indicator.ipynb  directional-movement-index.ipynb  dmi-indicator.ipynb  donchian-channel.ipynb  drawing-primitives.ipynb  folder.py  hma-indicator.ipynb  keltner-channel.ipynb  library-tests.ipynb  lineplot-primitive.ipynb  macd-indicator.ipynb  macdv-indicator.ipynb  marimo-chart.py  markers-example.ipynb  markers-primitive.ipynb  matplotlib-styles.ipynb  mplchart-abstract.ipynb  mplchart-bbands.ipynb  mplchart-builtins.ipynb  (+52 more)
experiments/: date-formating.ipynb  date-labels.ipynb  date-ticks.ipynb  diff-cumsum.ipynb  financial-plot.ipynb  freq-values.ipynb
extras/: make-samples.ipynb  mplchart-helper.ipynb  mplchart-showcase.ipynb  mplchart-stylesheet.ipynb  process-readme.py  project.py  sample-data.ipynb  sample-prices.ipynb
misc/: areaplot-primitive.ipynb  auto-label-proto.ipynb  axes-modifiers.ipynb  axes-primitives.ipynb  chart-bgcolor.ipynb  charting-test.ipynb  charting-tests.ipynb  colors-proto.ipynb  custom-label.ipynb  cycler-proto.ipynb  date-index.ipynb  date-mapper.ipynb  date-range.ipynb  date-ticks.ipynb  design-ideas.md  financial-plot.ipynb  flag-markers.ipynb  helper-module.ipynb  indicator-info.ipynb  indicator-proto.ipynb  indicator-protos.ipynb  infodict-proto.ipynb  library-tests.ipynb  manip-proto.ipynb  mapping-proto.ipynb  marimo-chart.py  matplotlib-backend.ipynb  matplotlib-colors.ipynb  matplotlib-cycler.ipynb  matplotlib-library.ipynb  matplotlib-palette.ipynb  matplotlib-rcparams.ipynb  matplotlib-stylelib.ipynb  matplotlib-styles.ipynb  mplchart-help.ipynb  mplchart-interact.ipynb  mplchart-tests.ipynb  pattern-test.ipynb  peaks-primitive.ipynb  pipeline-proto.ipynb  (+15 more)
miscellaneous/: areaplot-primitive.ipynb  axes-primitives.ipynb  barplot-primitive.ipynb  color-modifier.ipynb  color-scheme.ipynb  date-ticks.ipynb  design-ideas.md  indicator-info.ipynb  indicator-proto.ipynb  label-proto.ipynb  lineplot-primitive.ipynb  matplotlib-colors.ipynb  matplotlib-rcparams.ipynb  matplotlib-stylelib.ipynb  mplchart-help.ipynb  mplchart-tests.ipynb  pandas-align.ipynb  peaks-primitive.ipynb  sample-prices.ipynb  sar-prototype.ipynb  stylemap-proto.ipynb  stylesheet-proto.ipynb  talib-functions.ipynb  yfinance-prices.ipynb
output/: README.md  pypi-readme.md  talib-functions.json
playground/: alma-indicator.ipynb  chart-from-script.py  chart-render.ipynb  color-scheme.ipynb  custom-indicator.ipynb  date-mapper.ipynb  label-proto.ipynb  library-tests.ipynb  manual-plot.ipynb  mapping-proxy.ipynb  matplotlib-backend.ipynb  matplotlib-colors.ipynb  matplotlib-rcparams.ipynb  matplotlib-styles.ipynb  mintalib-expressions.ipynb  mintalib-indicators.ipynb  mplchart-help.ipynb  mplchart-interact.ipynb  mplchart-tests.ipynb  nicegui-demo.py  pandas-expressions.ipynb  peaks-primitive.ipynb  rebase-series.ipynb  sample-prices.ipynb  set-xticks.ipynb  streamlit-demo.py  talib-functions.ipynb  yfinance-prices.ipynb
scripts/: compare-indicators.py  helper-module.ipynb  make-samples.ipynb  make-showcase.ipynb  mplchart-helper.ipynb  mplchart-showcase.ipynb  parse-config.ipynb  process-readme.ipynb  process-readme.py  project.py  stylesheet-proto.ipynb  update-preview.ipynb  update-samples.ipynb  update-samples.py  update-showcase.ipynb
tests/: conftest.py  test_abstract.py  test_builtins.py  test_expressions.py  test_helper.py  test_indicators.py  test_indicators_pandas.py  test_mintalib_expressions.py  test_mintalib_indicators.py  test_mplchart.py  test_pandas.py  test_pandas_expressions.py  test_pandas_indicators.py  test_pandas_primitives.py  test_polars.py  test_polars_primitives.py  test_primitives.py  test_primitives_pandas.py  test_primitives_polars.py  test_raw_dates.py  test_reversal_patterns.py  test_rsi_divergence.py  test_talib_functions.py  test_talib_integration.py  test_talib_pandas.py  test_talib_polars.py  test_trend_lines.py  test_zigzag.py
(+71 files in other folders)
