[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.0,<0.9.0"]
# See https://docs.astral.sh/uv/concepts/build-backend/


[project]
name = "mplchart"
version = "0.0.28"
requires-python = ">=3.10"
readme = "output/pypi-readme.md"
description = "Classic Stock Charts in Python"
urls.homepage = "https://github.com/furechan/mplchart"
authors = [{ name = "Furechan", email = "furechan@xsmail.com" }]
keywords = ["finance", "charting", "matplotlib", "candlesticks"]
dependencies = ["matplotlib", "pandas", "numpy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "numpy",
    "pandas",
    "polars",
    "yfinance",
    "pytest",
    "nbmake",
    "ipykernel",
    "jinja2",
    "ipywidgets",
    "ruff",
    "nbmask",
    "invoke",
    "pdoc",
    "numba",
    "twine",
    "ta-lib>=0.6.7",
]

[tool.pytest.ini_options]
addopts = ["-p no:cacheprovider"]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*.ipynb" = ["F401", "F811"]

[tool.pydev]
allow-publish = true
