[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.0,<0.9.0"]
# See https://docs.astral.sh/uv/concepts/build-backend/


[project]
name = "mplchart"
version = "0.0.33"
requires-python = ">=3.10"
readme = "output/pypi-readme.md"
description = "Classic Stock Charts in Python"
license-files = ["LICENSE.txt"]
urls.homepage = "https://github.com/furechan/mplchart"
authors = [{ name = "Furechan", email = "furechan@xsmail.com" }]
keywords = ["finance", "charting", "matplotlib", "candlesticks"]
dependencies = ["matplotlib", "numpy", "pyarrow"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
pandas = ["pandas"]
polars = ["polars"]

[dependency-groups]
dev = [
    "numpy",
    "pandas",
    "polars",
    "yfinance",
    "pytest",
    "nbmake",
    "ipykernel",
    "jinja2",
    "ipywidgets",
    "ruff",
    "nbmask",
    "invoke",
    "pdoc",
    "numba",
    "twine",
    "ta-lib>=0.6.7",
    "mintalib",
    "nicegui>=3.9.0",
    "streamlit>=1.55.0",
    "nbcheck>=0.0.2",
    "ty>=0.0.26",
]

[tool.pytest.ini_options]
addopts = ["-p no:cacheprovider"]
testpaths = ["tests"]
markers = [
    "pandas: tests that require the pandas backend",
    "polars: tests that require the polars backend",
    "talib: tests that require the ta-lib library",
    "mintalib: tests that require the mintalib library",
]

[tool.ruff]
cache-dir = "/dev/null"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*.ipynb" = ["F401", "F811"]

[tool.pydev]
allow-publish = true
