[metadata]
name = mplchart
version = 0.0.1
description = Professional looking Stock Charts in Python
long_description = file: output/README.md
long_description_content_type= text/markdown
keywords = charting
author = furechan
author_email = furechan@xsmail.com
license = MIT License
url = https://github.com/furechan/mplchart-proto

classifiers =
    Topic :: Office/Business :: Financial
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
package_dir= =src
packages = find:
python_requires = >=3.8
install_requires =
    matplotlib
    numpy
    pandas
    yfinance

[options.packages.find]
where=src
