[metadata]
name = mplchart
version = attr: mplchart.__version__
description = Classic Stock Charts in Python
long_description = file: output/README.md
long_description_content_type = text/markdown
keywords = finance, charting, matplotlib, candlesticks
author = furechan
author_email = furechan@xsmail.com
license = MIT License
url = https://github.com/furechan/mplchart

classifiers =
    Topic :: Office/Business :: Financial
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
package_dir = =src
packages = find:
tests_require = pytest
python_requires = >=3.8
install_requires =
    matplotlib
    numpy
    pandas
    yfinance

[options.packages.find]
where = src
